# glm-ocr-ingest

./: README.md  config.py  glm_ocr_cli.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
glm_ocr/: __init__.py  artifacts.py  benchmark.py  cli.py  config_defaults.py  constants.py  evaluate.py  models.py  normalize.py  orchestrator.py  sources.py  store.py  utils.py
glm_ocr/providers/: base.py  glm_provider.py
glm_ocr/sql/: 001_init.sql
tests/: conftest.py  test_artifacts.py  test_benchmark.py  test_cli.py  test_evaluate.py  test_glm_provider.py  test_normalize.py  test_orchestrator.py  test_provider_contract.py  test_sources.py
