[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glm-ocr-wrapper"
version = "0.1.0"
description = "Sandbox-ready GLM-OCR ingestion wrapper with replayable artifacts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "glmocr[layout]>=0.1.5,<0.2.0",
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.11,<0.12",
]

[project.scripts]
glm-ocr = "glm_ocr.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["glm_ocr*"]

[tool.setuptools.package-data]
glm_ocr = ["sql/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "ARG"]
